Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -477,3 +477,438 @@ endmethod.
     DELETE zn2member_b03 FROM ls_data.
   endmethod.
 ```
+</br>
+</br>
+
+### 2) Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+    "sap/ui/model/Sorter"
+], (Controller, JSONModel, Fragment, Filter, FilterOperator, Sorter) => {
+    "use strict";
+
+    return Controller.extend("zuimemberb03.controller.Main", {
+        onInit() {
+            this.oDataModel = this.getOwnerComponent().getModel();
+            this.oInputModel = new JSONModel();
+            this.oMainModel = new JSONModel();
+            this.getView().setModel(this.oInputModel, "oInputModel");
+            this.getView().setModel(this.oMainModel, "oMainModel");
+            this.oDataRead();
+        },
+        FixUTC: function(oDate) {
+            if (!oDate) return null;
+            return new Date(oDate.getTime() - (oDate.getTimezoneOffset() * 60000));
+        },
+        onSearch: function() {
+            this.oDataRead();
+        },
+        oDataRead: function() {
+            let oData = this.oInputModel.getData();
+            let oFilter = [];
+            
+            if(oData.Name) {
+                oFilter.push(new Filter("Name", FilterOperator.Contains, oData.Name));
+            }
+            if(oData.ErdatStart && oData.ErdatEnd) {
+                oFilter.push(new Filter("Erdat", FilterOperator.BT, this.FixUTC(oData.ErdatStart), this.FixUTC(oData.ErdatEnd)));
+            }
+            if(oData.AedatStart && oData.AedatEnd) {
+                oFilter.push(new Filter("Aedat", FilterOperator.BT, this.FixUTC(oData.AedatStart), this.FixUTC(oData.AedatEnd)));
+            }
+
+            this.oDataModel.read("/MemberEntitySet", {          // 화면에 oData 리프레쉬
+                filters: oFilter,
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("read 에러!");
+                }
+            })
+        },
+        formatAge: function(sAge) {
+            if (!sAge) return "";
+            return Number(sAge);
+        },
+        onrowSelectionChange: function(oEvent) {
+            let oRow = oEvent.getParameter("rowContext");
+            if(!oRow) return;
+            let oData = oRow.getObject();
+            // let oData = oEvent.getParameters().rowContext.getObject();
+            let oModel = new JSONModel(oData);  
+             
+            if(this._oDialog) {   
+                this.byId("idCreate").setEnabled(false);
+                this.byId("idUpdate").setEnabled(true);
+                this.byId("idDelete").setEnabled(true);
+                this.byId("idOption").setSelectedKey("Update");
+                this.byId("idId").setEnabled(false);
+                this.byId("idName").setEnabled(true);
+                this.byId("idAge").setEnabled(true);
+
+                this._oDialog.setModel(oModel, "oDialogModel");        
+                this._oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    id: this.getView().getId(),     // 다이얼로그를 현재 뷰의 ID 체계에 편입시켜 this.byId()로 접근 가능하게 만듦
+                    name: "zuimemberb03.view.fragment.oDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    this.byId("idCreate").setEnabled(false);
+                    this.byId("idUpdate").setEnabled(true);
+                    this.byId("idDelete").setEnabled(true);
+                    this.byId("idOption").setSelectedKey("Update");
+                    this.byId("idId").setEnabled(false);
+                    this.byId("idName").setEnabled(true);
+                    this.byId("idAge").setEnabled(true);
+
+                    this._oDialog = oDialog;
+                    this._oDialog.setModel(oModel, "oDialogModel");
+                    this.getView().addDependent(this._oDialog) // 다이얼로그를 현재 뷰에 종속시켜 뷰의 모델(데이터)과 ID 체계를 공유하도록 설정
+                    this._oDialog.open();
+                }.bind(this))
+            }
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();
+
+            if(this._oDialog) { 
+                this.byId("idCreate").setEnabled(true);
+                this.byId("idUpdate").setEnabled(false);
+                this.byId("idDelete").setEnabled(false);
+                this.byId("idOption").setSelectedKey("Create");
+                this.byId("idId").setEnabled(true);
+                this.byId("idName").setEnabled(true);
+                this.byId("idAge").setEnabled(true);
+
+                this._oDialog.setModel(oModel, "oDialogModel");     
+                this._oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    id: this.getView().getId(),     // 다이얼로그를 현재 뷰의 ID 체계에 편입시켜 this.byId()로 접근 가능하게 만듦
+                    name: "zuimemberb03.view.fragment.oDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    this.byId("idCreate").setEnabled(true);
+                    this.byId("idUpdate").setEnabled(false);
+                    this.byId("idDelete").setEnabled(false);
+                    this.byId("idId").setEnabled(true);
+                    this.byId("idName").setEnabled(true);
+                    this.byId("idAge").setEnabled(true);
+                    this.byId("idOption").setSelectedKey("Create");
+
+                    this._oDialog = oDialog;
+                    this._oDialog.setModel(oModel, "oDialogModel");
+                    this.getView().addDependent(this._oDialog) // 다이얼로그를 현재 뷰에 종속시켜 뷰의 모델(데이터)과 ID 체계를 공유하도록 설정
+                    this._oDialog.open();
+                }.bind(this))
+            }
+        },
+        onSelectChange: function() {
+            let oKey = this.byId("idOption").getSelectedKey();
+            
+            if(oKey === "Update") {
+                this.byId("idId").setEnabled(false);
+                this.byId("idName").setEnabled(true);
+                this.byId("idAge").setEnabled(true);
+            }
+            else if(oKey === "Delete") {
+                this.byId("idId").setEnabled(false);
+                this.byId("idName").setEnabled(false);
+                this.byId("idAge").setEnabled(false);
+            }
+        },
+        onSave: function() {
+            let oKey = this.byId("idOption").getSelectedKey();
+            let oModel = this._oDialog.getModel("oDialogModel");
+            let oData = oModel.getData();
+
+            if(oKey === "Create") {
+                let oBody = {
+                    Id: oData.Id,
+                    Name: oData.Name,
+                    Age: oData.Age
+                }
+                this.oDataModel.create("/MemberEntitySet", oBody, {
+                    success: function() {
+                        sap.m.MessageToast.show("Create 성공!");
+                    },
+                    error: function() {
+                        sap.m.MessageToast.show("Create 실패!");
+                    }
+                })
+                this.oDataRead();
+            } 
+            else if(oKey === "Update") {
+                let sPath = this.oDataModel.createKey("/MemberEntitySet", {
+                    Id : oData.Id
+                }) 
+                let oBody = {
+                    Id: oData.Id,
+                    Name: oData.Name,
+                    Age: oData.Age
+                }
+                this.oDataModel.update(sPath, oBody, {
+                    success: function() {
+                        sap.m.MessageToast.show("Update 성공!");
+                    },
+                    error: function() {
+                        sap.m.MessageToast.show("Update 실패!");
+                    }
+                })
+                this.oDataRead();
+            }
+            else if(oKey === "Delete") {
+                let sPath = this.oDataModel.createKey("/MemberEntitySet", {
+                    Id : oData.Id
+                }) 
+                this.oDataModel.remove(sPath, {
+                    success: function() {
+                        sap.m.MessageToast.show("Delete 성공!");
+                    },
+                    error: function() {
+                        sap.m.MessageToast.show("Delete 실패!");
+                    }
+                })
+                this.oDataRead();
+            }
+        },
+        onClose: function() {
+            this._oDialog.close();
+        }
+    });
+});
+```
+</br>
+</br>
+
+### 3) Main.view.xml
+```html
+<mvc:View controllerName="zuimemberb03.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:t="sap.ui.table"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <content>
+            <fb:FilterBar id="filterbar" persistencyKey="myPersKey" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
+                <fb:filterGroupItems>
+                    <fb:FilterGroupItem name="Name" label="이름" groupName="Group1" visibleInFilterBar="true">
+                        <fb:control>
+                            <Input value="{oInputModel>/Name}"/>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                    <fb:FilterGroupItem name="Erdat" label="생성일" groupName="Group1" visibleInFilterBar="true">
+                        <fb:control>
+                            <DateRangeSelection
+                                id="idErdat"
+                                change="handleChange"
+                                value= "{
+                                    'type': 'sap.ui.model.type.DateInterval',
+                                    'parts': [
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/ErdatStart'
+                                        },
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/ErdatEnd'
+                                        }
+                                    ]
+                                }"/>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                    <fb:FilterGroupItem name="Aedat" label="변경일" groupName="Group1" visibleInFilterBar="true">
+                        <fb:control>
+                            <DateRangeSelection
+                                id="idAedat"
+                                change="handleChange"
+                                value= "{
+                                    'type': 'sap.ui.model.type.DateInterval',
+                                    'parts': [
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/AedatStart'
+                                        },
+                                        {
+                                            'type': 'sap.ui.model.type.Date',
+                                            'path': 'oInputModel>/AedatEnd'
+                                        }
+                                    ]
+                                }"/>
+                        </fb:control>
+                    </fb:FilterGroupItem>
+                </fb:filterGroupItems>
+            </fb:FilterBar>
+
+            <t:Table id="idTable" 
+                rows="{
+                    path: 'oMainModel>/',
+                    sorter: {
+                        path: 'Id', 
+                        descending: false
+                    }
+                }"
+                selectionMode="Single"
+                rowSelectionChange="onrowSelectionChange"
+                paste="onPaste"
+                selectionBehavior="Row"
+                ariaLabelledBy="title">
+                <t:extension>
+                    <OverflowToolbar style="Clear">
+                        <Title id="title" text="CRUD 프로그램"/>
+                        <Button text="Create" press="onCreate" />
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column width="12rem">
+                        <Label text="Id" />
+                        <t:template>
+                            <Text text="{oMainModel>Id}" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Name" />
+                        <t:template>
+                            <Text text="{oMainModel>Name}"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Age" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Age',
+                                formatter: '.formatAge'
+                            }"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Ernam" />
+                        <t:template>
+                            <Text text="{oMainModel>Ernam}"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Erdat" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Erdat',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Erzet" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Erzet',
+                                type: 'sap.ui.model.odata.type.Time',
+                                formatOptions: {
+                                    pattern: 'HH:mm:ss'
+                                }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Aenam" />
+                        <t:template>
+                            <Text text="{oMainModel>Aenam}"/>
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Aedat" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Aedat',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column width="12rem">
+                        <Label text="Aezet" />
+                        <t:template>
+                            <Text text="{
+                                path: 'oMainModel>Aezet',
+                                type: 'sap.ui.model.odata.type.Time',
+                                formatOptions: {
+                                    pattern: 'HH:mm:ss'
+                                }
+                            }" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </content>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### 4) oDialog.fragment.xml
+```html
+<c:FragmentDefinition id="idFragment"
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idDialog"
+            title="Details"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <VBox class="sapUiSmallMargin">
+                <f:SimpleForm id="SimpleFormChange354"
+                    editable="true"
+                    layout="ResponsiveGridLayout"
+                    title="Address"
+                    labelSpanXL="3"
+                    labelSpanL="3"
+                    labelSpanM="3"
+                    labelSpanS="12"
+                    adjustLabelSpan="false"
+                    emptySpanXL="4"
+                    emptySpanL="4"
+                    emptySpanM="4"
+                    emptySpanS="0"
+                    columnsXL="1"
+                    columnsL="1"
+                    columnsM="1"
+                    singleContainerFullSize="false" >
+                    <f:content>
+                        <Select id="idOption" change="onSelectChange" >
+                            <items>
+                                <c:Item id="idCreate" text="Create" key="Create" enabled="false" />
+                                <c:Item id="idUpdate" text="Update" key="Update" enabled="true" />
+                                <c:Item id="idDelete" text="Delete" key="Delete" enabled="true" />
+                            </items>
+                        </Select>
+                        <Label text="Id" id="id1"/>
+                        <Input id="idId" value="{oDialogModel>/Id}" enabled="false"/>
+                        <Label text="Name" />
+                        <Input id="idName" value="{oDialogModel>/Name}" enabled="true"/>
+                        <Label text="Age" />
+                        <Input id="idAge" value="{oDialogModel>/Age}" enabled="true"/>
+                    </f:content>
+                </f:SimpleForm>
+            </VBox>
+        </content>
+        <buttons>
+            <Button text="Save" press=".onSave" />
+            <Button text="Close" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
