--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -1,6 +1,7 @@
 ## < 연습 : Header-Item Read로 읽기 (수정본) >
 - 아이템만 생성하려고 했는데 아이템만 생성하는 코드를 안짜서 생성은 못짰음
 - 라우팅 복습
+- Sort 적용 (테이블에)
 
 <img width="647" height="338" alt="image" src="https://github.com/user-attachments/assets/49608e80-5a6a-4281-8f7f-36d31f11e44a" />
 </br>
