Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -913,3 +913,17 @@ sap.ui.define([
     </Dialog>
 </c:FragmentDefinition>
 ```
+
+</br>
+</br>
+
+### 4) 타일 생성
+- 최초 1회 실행
+  - npm run build
+  - npm run deploy-config
+  - npm run deploy
+- 2번째 배포부터(코드 수정 시)
+  - npm run build
+  - npm run deploy
+ 
+![Uploading image.png…]()
