Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -926,4 +926,5 @@ sap.ui.define([
   - npm run build
   - npm run deploy
  
-![Uploading image.png…]()
+<img width="491" height="245" alt="image" src="https://github.com/user-attachments/assets/a90f0fb1-1133-4424-b63c-e6bdc1b09aa6" />
+
