Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -927,4 +927,35 @@ sap.ui.define([
   - npm run deploy
  
 <img width="491" height="245" alt="image" src="https://github.com/user-attachments/assets/a90f0fb1-1133-4424-b63c-e6bdc1b09aa6" />
+</br>
+</br>
 
+- SAP GUI에서 확인 가능
+<img width="345" height="290" alt="image" src="https://github.com/user-attachments/assets/b3d5d0c0-0565-4ac3-b3e2-d15489647623" />
+</br>
+</br>
+
+- 카탈로그 생성
+<img width="648" height="325" alt="image" src="https://github.com/user-attachments/assets/10e89401-feaf-4df4-8813-be12bff47a99" />
+</br>
+</br>
+
+<img width="827" height="228" alt="image" src="https://github.com/user-attachments/assets/91854f33-0d61-4d4a-af22-6edad3f875b5" />
+</br>
+</br>
+
+<img width="726" height="292" alt="image" src="https://github.com/user-attachments/assets/361cee95-eea8-43df-b07e-a3246420cb97" />
+</br>
+</br>
+
+- 타겟 맵핑 생성 후 그룹에 추가
+<img width="864" height="215" alt="image" src="https://github.com/user-attachments/assets/d899f905-2e27-4e58-9650-1929a39bf49e" />
+</br>
+</br>
+
+- 추가 안되면 직접 추가 가능
+<img width="356" height="361" alt="image" src="https://github.com/user-attachments/assets/989e495d-a865-4315-9c82-f611a6fbb517" />
+</br>
+</br>
+
+<img width="1008" height="219" alt="image" src="https://github.com/user-attachments/assets/e8654cc1-cc0e-4134-9ce4-ffd8fc04953f" />
